--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "bookshelf": "^0.13.3",
+    "bookshelf-secure-password": "^3.1.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.1.1",
